test/valid/56269_multipleAssignment/multipleAssignment.agu
-- Author: 56269, Frederico Prazeres

let main(_) : Unit -> Unit =
  let x : Int = 1;
  set x = x + 1;
  set x = x * 3;
  set x = x - 2;
  print(x)